# SETR

./: README.md  ola.c
Assignement01/Trabalho1/: .~lock.report01.pdf.odt#  MyDLL.c  MyDLL.h  README.md  Testes.c  Testes.h  ass01  dconfig  dependency_graph.dot  main.c  makefile  report01.odt
Assignement01/Trabalho1/html/: MyDLL_8h.html  MyDLL_8h__dep__incl.dot  MyDLL_8h__incl.dot  MyDLL_8h_source.html  Testes_8h.html  Testes_8h__incl.dot  Testes_8h_source.html  annotated.html  bug.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  group__MyDLL.html  group__dependency__graph.html  index.html  main_page.html  menudata.js  modules.html  pages.html  structDLL__List-members.html  structDLL__List.html  structDLL__List__coll__graph.dot  structMyDLL-members.html  structMyDLL.html  structMyDLL__coll__graph.dot
Assignement01/Trabalho1/latex/: MyDLL_8h.tex  MyDLL_8h.tex.tmp  MyDLL_8h__dep__incl.dot  MyDLL_8h__incl.dot  Testes_8h.tex  Testes_8h__incl.dot  annotated.tex  bug.tex  files.tex  group__MyDLL.tex  group__dependency__graph.tex  index.tex  main_page.tex  modules.tex  refman.tex  structDLL__List.tex  structDLL__List__coll__graph.dot  structMyDLL.tex  structMyDLL__coll__graph.dot
Assignement01/cmakeExamplesStudents/_10_Hello/: CMakeLists.txt  README.md
Assignement01/cmakeExamplesStudents/_20_SimpleLib/: CMakeLists.txt  README.md
Assignement01/cmakeExamplesStudents/_20_SimpleLib/MovAvgLibFolder/: CMakeLists.txt  movavg.c
Assignement01/cmakeExamplesStudents/_21_SimpleLibCompilerOptions/: CMakeLists.txt  README.md
Assignement01/cmakeExamplesStudents/_21_SimpleLibCompilerOptions/MovAvgLibFolder/: CMakeLists.txt  Makefile  cmake_install.cmake  movavg.h
Assignement01/cmakeExamplesStudents/_21_SimpleLibCompilerOptions/src/: main.c
Assignement01/cmakeExamplesStudents/_30_Doxygen/: CMakeLists.txt  README.md
Assignement02/: .~lock.report02.odt#  CMakeLists.txt  README.md  TXT.txt  report02.odt
Assignement02/doc/: Doxyfile
Assignement02/doc/html/: Testes_8h.html  Testes_8h_source.html  Uart_8h.html  Uart_8h_source.html  annotated.html  classes.html  dir_000001_000000.html  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.dot  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  group__Uart.html  index.html  menudata.js  modules.html  structUNITY__STORAGE__T.html  unity__internals_8h_source.html
Assignement02/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  groups_0.js  pages_0.js  searchdata.js
Assignement02/doc/latex/: Testes_8h.tex  Uart_8h.tex  annotated.tex  files.tex  group__Uart.tex  index.tex  refman.tex  structUNITY__STORAGE__T.tex
Assignement02/header/: Testes.h  Uart.h
Assignement02/source/: Testes.c  Uart.c  main  main.c
Assignement03/: README.md
Assignement03/Assignement_C/: .cproject  .project  CMakeLists.txt  Statechart.sgen  Statechart.ysc  main.c  prj.conf  report03.odt
Assignement03/Assignement_C/application/: CMakeLists.txt  Makefile  main.c
Assignement03/Assignement_C/application/Functions/: Functions.c  Functions.h
Assignement03/Assignement_C/application/debug/: debugprint.h
Assignement03/Assignement_C/application/timers/: timers.c  timers.h
Assignement03/Assignement_C/src-gen/: Statechart.c  Statechart.h  Statechart_required.h
Assignement03/doc/: Doxyfile
Assignement04/: CMakeLists.txt  README.md  main.c  prj.conf
Assignement04/doc/: Doxyfile
Assignement04/src/: Testes.c  Uart.c  unity.c
Aula1/: dailytemp.c
Codigo_Teste_Prof/basic_01_a_blinkDemo/: CMakeLists.txt
Codigo_Teste_Prof/basic_02_a_modSwDemo/: CMakeLists.txt  prj.conf
Codigo_Teste_Prof/basic_02_a_modSwDemo/src/: main.c
Codigo_Teste_Prof/basic_02_a_modSwDemo/src/MyMath/: MyMath.c
Codigo_Teste_Prof/basic_02_b_modSwDemoCondIncl/: CMakeLists.txt  Kconfig  prj.conf
Codigo_Teste_Prof/basic_03_pwmDigIOIntDemo/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
Codigo_Teste_Prof/basic_04_adcDemo/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
Codigo_Teste_Prof/basic_05_UARTDemo/: CMakeLists.txt  prj.conf
Codigo_Teste_Prof/basic_06_ConsoleDemo/: CMakeLists.txt  prj.conf
Codigo_Teste_Prof/basic_07_LogDemo/: CMakeLists.txt  prj.conf
Codigo_Teste_Prof/basic_08_I2CDemo_DT/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
Codigo_Teste_Prof/basic_09_GenericGPIO/: CMakeLists.txt  prj.conf
Codigo_Teste_Prof/rt_01_periodic_threads/: CMakeLists.txt
Codigo_Teste_Prof/rt_01_periodic_threads_sleep/: CMakeLists.txt
Codigo_Teste_Prof/rt_02_periodic_thread_DigIO/: CMakeLists.txt  prj.conf
Codigo_Teste_Prof/rt_03_periodic_thread_IOInterrupt/: CMakeLists.txt  prj.conf
Codigo_Teste_Prof/rt_04_dataflow_shmem_threads/: CMakeLists.txt  prj.conf
Codigo_Teste_Prof/rt_05_dataflow_fifo_threads/: CMakeLists.txt  prj.conf
ITEMIS/.metadata/: version.ini
ITEMIS/Assignement_C/: .project
(+393 files in other folders)
